# fastmind

./: README.md  README_ch.md  __init__.py  pyproject.toml  requirements.txt
contrib/: __init__.py  api.py
core/: app.py  engine.py  event.py  graph.py  node.py  perception.py  state.py  tool.py
docs/: api_reference.md  core_concepts.md  examples.md  index.md  quickstart.md
docs/advanced/: event_listening.md  human_in_loop.md  perception_loop.md  streaming.md  subgraph.md
docs/best_practices/: state_design.md  tool_design.md
docs_en/: api_reference.md  core_concepts.md  examples.md  index.md  quickstart.md
docs_en/advanced/: event_listening.md  human_in_loop.md  perception_loop.md  streaming.md  subgraph.md
docs_en/best_practices/: state_design.md  tool_design.md
examples/: companion_bot.py  comprehensive_assistant.py  drone.py  human_in_loop.py  humanoid_robot.py  perception_loop.py  simple_chat.py  simple_chat_with_tool.py  sleep_assessment.py  streaming_chat.py
tests/: __init__.py  test_api.py  test_app.py  test_engine.py  test_event.py  test_graph.py  test_integration.py  test_llm_integration.py  test_node.py  test_node_repeat_protection.py  test_perception.py  test_performance.py  test_state.py  test_tool.py
utils/: __init__.py  logging.py
